# rabbitmq-notes

./: README.md  notes.md
example/: Dockerfile  Makefile  compose.yaml  pyproject.toml  pyrightconfig.json
example/code/: hello_world.py  work_queues.py
examples/hello_world/: Makefile  compose.yaml
examples/hello_world/consumer/: main.py  pyproject.toml
examples/hello_world/producer/: main.py  mypy.ini  pyproject.toml
examples/hello_world_streams/: compose.yaml
examples/hello_world_streams/consumer/: main.py  pyproject.toml
examples/hello_world_streams/producer/: main.py  pyproject.toml
examples/publish_subscribe/consumer/: main.py
examples/publish_subscribe/producer/: main.py
examples/real_example/: README.md  compose.yaml
examples/real_example/consumer/: main.py  pyproject.toml
examples/real_example/server/: Dockerfile  main.py  pyproject.toml
examples/routing/: compose.yaml
examples/routing/consumer/: main.py
examples/routing/producer/: main.py  pyproject.toml
examples/topic/: compose.yaml
examples/topic/consumer/: Dockerfile  main.py
examples/topic/producer/: main.py
examples/work_queues/: compose.yaml
examples/work_queues/consumer/: main.py
examples/work_queues/producer/: main.py
