[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
rstream = "^0.20.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

