[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

